# usb4java

./: .gitignore  .hgignore  LICENSE.md  README.md  README.txt  TODO.txt  pom.xml
.github/ISSUE_TEMPLATE/: bug_report.md
libusb4java/: Makefile.am  Makefile.scm  acinclude.m4  pom.xml
libusb4java/src/main/c/: USB.c  USB_Bus.c  USB_Device_Descriptor.c  USB_Interface_Descriptor.h
libusb4java/src/test/c/: Makefile  dump.c
src/changes/: changes.xml
src/config/: usb4java_checks.xml
src/firmware/c/: Makefile  README.txt  descriptor.h  main.c  usbconfig.h
src/firmware/c/pwm/: pwm.c  pwm.h  pwmconfig.h
src/firmware/c/usbdrv/: Changelog.txt  Readme.txt  asmcommon.inc  oddebug.c  oddebug.h  usbconfig-prototype.h  usbdrv.c  usbdrv.h  usbdrvasm.S  usbdrvasm.asm  usbdrvasm12.inc  usbdrvasm128.inc  usbdrvasm15.inc  usbdrvasm16.inc  usbdrvasm165.inc  usbdrvasm18-crc.inc  usbdrvasm20.inc  usbportability.h
src/main/assembly/: AUTHORS.txt  README.txt  linux-x86.xml  linux-x86_64.xml  macosx-universal.xml  src.xml  tarball.xml  windows-x86.xml  windows-x86_64.xml  zip.xml
src/main/assembly/macosx-universal/: libusb.dylib  libusb4java.dylib
src/main/c/: .cproject  .gitignore  AUTHORS  Makefile.in  Makefile.scm  NEWS  README  acinclude.m4  aclocal.m4  autogen.sh  build.xml  config.h.in  configure  configure.ac
src/main/c/src/: BOSDescriptor.c  BOSDescriptor.h  BOSDevCapabilityDescriptor.c  BOSDevCapabilityDescriptor.h  BosDescriptor.c  BosDescriptor.h  BosDevCapabilityDescriptor.c  BosDevCapabilityDescriptor.h  ConfigDescriptor.c  ConfigDescriptor.h  ContainerIdDescriptor.c  ContainerIdDescriptor.h  Context.c  Context.h  Device.c  Device.h  DeviceDescriptor.c  DeviceDescriptor.h  DeviceHandle.c  DeviceHandle.h  DeviceList.c  DeviceList.h  EndpointDescriptor.c  EndpointDescriptor.h  HotplugCallbackHandle.c  HotplugCallbackHandle.h  Interface.c  Interface.h  InterfaceDescriptor.c  InterfaceDescriptor.h  IsoPacketDescriptor.c  IsoPacketDescriptor.h  LibUsb.c  Makefile.am  Makefile.in  SSEndpointCompanionDescriptor.c  SSEndpointCompanionDescriptor.h  SsEndpointCompanionDescriptor.c  SsEndpointCompanionDescriptor.h  SsUsbDeviceCapabilityDescriptor.c  (+31 more)
src/main/java/: Test.java
src/main/java/org/libusb4java/: BosDescriptor.java  BosDevCapabilityDescriptor.java  ConfigDescriptor.java  ContainerIdDescriptor.java  Context.java  ControlSetup.java  Device.java  DeviceDescriptor.java  DeviceHandle.java  DeviceList.java  DeviceListIterator.java  EndpointDescriptor.java  HotplugCallback.java  HotplugCallbackHandle.java  Interface.java  InterfaceDescriptor.java  IsoPacketDescriptor.java  LibUsb.java  LibUsbException.java  Loader.java  LoaderException.java  PollfdListener.java  SsEndpointCompanionDescriptor.java  SsUsbDeviceCapabilityDescriptor.java  Transfer.java  TransferCallback.java  Usb20ExtensionDescriptor.java  Version.java  package-info.java
src/main/java/org/usb4java/: AbstractDevice.java  AbstractIrpQueue.java  BosDescriptor.java  BosDevCapabilityDescriptor.java  BufferUtils.java  Config.java  ConfigDescriptor.java  Configuration.java  ContainerIdDescriptor.java  Context.java  ControlIrpQueue.java  ControlSetup.java  DescriptorUtils.java  Device.java  DeviceDescriptor.java  DeviceHandle.java  DeviceId.java  DeviceList.java  DeviceListIterator.java  DeviceListenerList.java  DeviceManager.java  DeviceNotFoundException.java  Endpoint.java  EndpointDescriptor.java  EventListenerList.java  HotplugCallback.java  HotplugCallbackHandle.java  Hub.java  Interface.java  InterfaceDescriptor.java  IrpQueue.java  IsoPacketDescriptor.java  LibUsb.java  LibUsbException.java  Loader.java  LoaderException.java  NonHub.java  Pipe.java  (+22 more)
src/main/native/: acinclude.m4  configure.ac
src/main/native/src/: ConfigDescriptor.c  ConfigDescriptor.h  Context.c  Context.h  DeviceDescriptor.c  DeviceDescriptor.h  DeviceHandle.c  DeviceHandle.h  EndpointDescriptor.h  Error.c  Error.h  InterfaceDescriptor.c  LibUSB.c  Makefile.am  Transfer.c  Transfer.h  Version.c  Version.h  usb4java.c  usb4java.h
src/main/resources/macosx-universal/: libusb4java.dylib
src/site/: site.xml
src/site/apt/: build.apt  configuration.apt.vm  download.apt  download.apt.vm  faq.apt.vm  index.apt  index.apt.vm  manual.apt.vm  nativelibs.apt.vm  quickstart.apt  quickstart.apt.vm
src/site/apt/quickstart/: index.apt  javax-usb.apt  libusb.apt
src/site/resources/css/: site.css
src/site/resources/images/: favicon.xcf  logo.xcf
src/site/xdoc/: index.xml.vm
src/test/comparison/: Makefile
src/test/java/: Test.java
src/test/resources/: javax.usb-1.0.sig  javax.usb.properties
usb4java/: pom.xml
usb4java-jni/: pom.xml
usb4java-jsr80/: pom.xml
usb4java-lib/: AUTHORS  ChangeLog  README  configure.ac  pom.xml
usb4java-lib/src/: Makefile.am
usb4java-lib/src/main/c/: Makefile.am  USB.c  USB_Bus.c  USB_Bus.h  USB_Config_Descriptor.c  USB_Descriptor_Header.c  USB_Dev_Handle.h  USB_Device.c  USB_Device_Descriptor.c  USB_Device_Descriptor.h  USB_Endpoint_Descriptor.c  USB_Endpoint_Descriptor.h  USB_Handle.h  USB_Interface_Descriptor.c  USB_String_Descriptor.c  usb4java.h
usb4java-lib/src/test/c/: dump.c
usb4java-natives/: pom.xml
usb4java-natives/src/main/c/: configure.ac
usb4java/src/site/: site.xml
usb4java/src/site/apt/: configuration.apt.vm  faq.apt.vm  index.apt.vm  quickstart.apt.vm
(+501 files in other folders)
