lib_LTLIBRARIES = libusb4java.la
libusb4java_la_CFLAGS = -Wall -Werror -O2 -ansi 
libusb4java_la_LIBADD =
libusb4java_la_LDFLAGS = -version-info 0:0:0 -no-undefined
EXTRA_DIST = *.h
libusb4java_la_SOURCES = \
    USB.c \
    USB_Bus.c \
    USB_Device.c \
    USB_Device_Descriptor.c \
    USB_Config_Descriptor.c \
    USB_Dev_Handle.c \
    USB_Interface.c \
    USB_Interface_Descriptor.c \
    USB_Endpoint_Descriptor.c \
    USB_Descriptor_Header.c
