lib_LTLIBRARIES = libusb4java.la
libusb4java_la_CFLAGS = -fPIC -Wall -Werror -O2 -ansi
libusb4java_la_LIBADD = -lusb
libusb4java_la_LDFLAGS = -version-info 1:0:0 -no-undefined -lusb
libusb4java_la_SOURCES = \
    USB.c \
    USB_Bus.c \
    USB_Device.c \
    USB_Device_Descriptor.c \
    USB_Config_Descriptor.c \
    USB_Handle.c
	